# hec22

./: CLI_USAGE.md  Cargo.toml  INLET_EQUATION_FIXES.md  LICENSE  README.md  RUST_TYPES.md  architecture notes.md  extract_chapters.py  hydraulic_analysis_result.json  inlet_bypass_analysis.json  network_viewer.html
docs/: ATLAS14_UTILITY.md
examples/: build_network.rs  gutter_spread.rs  hydraulic_solver.rs  inlet_bypass_workflow.rs  inlet_capacity.rs  load_json.rs
examples/complete_network/: README.md  conduits.csv  conduits_extended_example.csv  drainage_areas.csv  nodes.csv  nodes_extended_example.csv
examples/visualizations/: README.md  network_viewer.html
reference/: TEST_CASE_REFERENCE.md  WORKED_EXAMPLES_EXTRACTED.md  chapter_9_equations.md
reference/constants/: manning_n_values.md
reference/equations/: detention_retention.md  gutter_flow.md  inlet_design.md  manning_equation.md  open_channel_flow.md  pump_stations.md  rational_method.md  stormwater_quality.md
reference/examples/: example_problem_1.md
schema/: QUICK_REFERENCE.md  README.md  drainage-network.schema.json  example_input.json  network_schema.json
src/: analysis.rs  conduit.rs  csv.rs  drainage.rs  gutter.rs  hydraulics.rs  inlet.rs  lib.rs  main.rs  network.rs  node.rs  project.rs  rainfall.rs  solver.rs
templates/: README.md  README_old.md  conduits.csv  design_storms.csv  drainage_areas.csv  gutter_parameters.csv  idf_curves.csv  nodes.csv  nodes_extended_example.csv
tests/: README.md  chapter5_verification.rs  json_schema_tests.rs  network_integration_test.rs
(+14 files in other folders)
